--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="../../frontend/src/components/Header/style.css"
     />
+    <link rel="stylesheet" href="../../frontend/src/pages/About/style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Acme&family=Amarante&family=Aref+Ruqaa:wght@700&family=Bakbak+One&family=Baloo+Chettan+2:wght@500&family=Metamorphous&family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
 
     <title>Easy Car</title>
   </head>
